# atabox-server

./: .gitignore  .gitmodules  Atabox_server.doxyfile  CMakeLists.txt  Makefile  Makefile2  README.md  SConstruct  add_method_int_test.sh  atabox-server.files  atabox-server.includes  atabox_deps.sh  compile.sh  i368.patch  include  install_external.sh  install_gtest.sh  kompilacja  labels-mfcc-lpcc-frames.npy  main.cpp  patch.sh  plikDoTestowRepo.txt  spectogram.py  wait.cpp
CMake/: CodeCoverage.cmake  UseShark.cmake
Debug/: .gitignore  atabox.json  index.html  log  makefile  objects.mk  sources.mk
Debug/js/: main.js
Debug/src/: main.d  main.gcda  main.gcno  subdir.mk
Debug/src/api/: AtaboxApi.d  AtaboxApi.gcda  AtaboxApi.gcno  subdir.mk
Debug/src/dataproviders/: FileDataProvider.gcno  RocksdbProvider.gcno  subdir.mk
Debug/src/recognition/: PropertiesComparator.d  PropertiesComparator.gcda  PropertiesComparator.gcno  subdir.mk
Debug/src/runner/: subdir.mk
Debug/src/utils/: DanielsonLanczos.gcda  DanielsonLanczos.gcno  subdir.mk
Debug/src/wave/: WaveFile.d  WaveFile.gcda  WaveFile.gcno  WaveFileAnalizator.gcda  WaveFileAnalizator.gcno  WavePreprocessor.d  WavePreprocessor.gcda  WavePreprocessor.gcno  WaveProperties.d  WaveProperties.gcda  WaveProperties.gcno  subdir.mk
Debug/test/: subdir.mk
Debug/test/wave/: WaveFileMock.d  subdir.mk
DebugTest/: makefile  objects.mk  sources.mk
DebugTest/src/api/: subdir.mk
DebugTest/src/dataproviders/: FileDataProvider.d  RocksdbProvider.d  subdir.mk
DebugTest/src/recognition/: subdir.mk
DebugTest/src/runner/: subdir.mk
DebugTest/src/utils/: DanielsonLanczos.d  subdir.mk
DebugTest/src/wave/: subdir.mk
DebugTest/test/: RunAllTests.d  subdir.mk
DebugTest/test/api/: subdir.mk
DebugTest/test/dataproviders/: RocksdbProviderTest.d  subdir.mk
DebugTest/test/recognition/: PropertiesComparatorTest.d  subdir.mk
DebugTest/test/runner/: subdir.mk
DebugTest/test/tuningRunners/: subdir.mk
DebugTest/test/utils/: DanielsonLanczosTest.d  FastFourierTransformTest.d  subdir.mk
DebugTest/test/wave/: WaveFileAnalizatorTest.d  WaveFileMock.d  WaveFileTest.d  WavePropertiesTest.d  subdir.mk  waveWavePreprocessorTest.d
Release/: index.html  makefile  objects.mk  sources.mk
Release/src/: subdir.mk
Release/src/api/: subdir.mk
Release/src/dataproviders/: subdir.mk
Release/src/recognition/: subdir.mk
Release/src/runner/: subdir.mk
Release/src/utils/: subdir.mk
Release/src/wave/: WaveFileAnalizator.d  subdir.mk
Release/test/wave/: subdir.mk
ReleaseTest/: sources.mk
ReleaseTest/src/wave/: WaveFileAnalizator.d  subdir.mk
ReleaseTest/test/: subdir.mk
ReleaseTest/test/wave/: subdir.mk
int_test/: add_method_int_test.sh  execute_method_int_test.sh  list_method_int_test.sh  run_test.sh  test_method_int_test.sh
src/: global.h  main.cpp
src/api/: AtaboxApi.cpp  AtaboxApi.h  BaseApi.h
src/dataproviders/: BaseDataProvider.h  FileDataProvider.cpp  FileDataProvider.h  RocksdbProvider.cpp  RocksdbProvider.h
src/math/: HannWindowFilter.h  fast_fourier_transform.h  hann_window.h
src/recognition/: FeatureExtractor.cpp  FeatureExtractor.h  ProcessAndAnalyze.cpp  ProcessAndAnalyze.h  PropertiesComparator.cpp  PropertiesComparator.h  RecognitionProcessor.cpp  RecognitionProcessor.h
src/recognition/network/: AtaboxRBM.cpp  AtaboxRBM.h  Batch.h  DBN.cpp  DBN.h  DeepBeliefNet.h  GaussianGaussianRBM.h  LRBM.h  RBM.cpp  RBM.h  RBM2.h  RBMConfig.h  activation_functions.h
src/runner/: Runner.cpp  Runner.h
src/utils/: DanielsonLanczos.cpp  DanielsonLanczos.h  FastFourierTransform.h  LightVector.h  atabox_log.cpp  atabox_log.h  ataboxexception.cpp  ataboxexception.h  execution_policy.h  functions.cpp  functions.h  jsonextend.h
src/wave/: NormalizedSamplesList.cpp  NormalizedSamplesList.h  Samples.cpp  Samples.h  WaveFile.cpp  WaveFile.h  WaveFileAnalizator.cpp  WaveFileAnalizator.h  WavePreprocessor.cpp  WavePreprocessor.h  WaveProperties.cpp  WaveProperties.h  WaveUtils.cpp  WaveUtils.h
src/wave/analysis/: AmplitudeProperty.h  ArrayProperty.cpp  ArrayProperty.h  AverageValueProperty.h  LengthProperty.cpp  (+18 more)
test/api/: AtaboxApiTest.cpp
test/dataproviders/: RocksdbProviderTest.cpp  RocksdbProviderTest.h
test/math/: HannWindowFilterTest.cpp
test/recognition/: PropertiesComparatorTest.cpp
test/runner/: RunnerTest.cpp
test/tuningRunners/: VimWaveRunner.cpp
test/utils/: DanielsonLanczosTest.cpp  FastFourierTransformTest.cpp  execution_policyTest.cpp  jsonextendTest.cpp
test/wave/: NormalizedSampleListMock.cpp  NormalizedSampleListMock.h  NormalizedSamplesList.cpp  NormalizedSamplesListTest.cpp  PreprocessorTest.cpp  SamplesMock.h  SamplesTest.cpp  WaveFileAnalizatorTest.cpp  WaveFileMock.cpp  WaveFileMock.h  WaveFileTest.cpp  WavePreprocessorTest.cpp  WavePropertiesTest.cpp  WaveUtilsTest.cpp  waveWavePreprocessorTest.cpp
tests/: .gitignore  CMakeLists.txt  CTestTestfile.cmake  Makefile  RunAllTests.cpp  cmake_install.cmake
tests/api/: AtaboxApiTest.cpp  casablancaMocks.cpp
tests/dataproviders/: RocksdbProviderTest.cpp
tests/recognition/: FeatureExtractorTest.cpp  PropertiesComparatorTest.cpp
tests/recognition/network/: DBNTest.cpp  RBMTest.cpp
tests/runner/: RunnerTest.cpp
tests/tuningRunners/: VimWaveRunner.cpp
tests/utils/: execution_policyTest.cpp  jsonextendTest.cpp
tests/wave/: PreprocessorTest.cpp  ProcessAndAnalyzeTest.cpp  SamplesMock.h  SamplesTest.cpp  WaveFileTest.cpp  WaveUtilsTest.cpp
tests/wave/analysis/: AmplitudePropertyTest.cpp  AverageValuePropertyTest.cpp  FirstSampleValueTestingProperty.h  LengthPropertyTest.cpp  LpccPropertyTest.cpp  MfccPropertyTest.cpp  PercentageAbovePropertyTest.cpp  SamplesAnalizatorTest.cpp  SpectrumPropertyTest.cpp  WhereIsAmplitudePropertyTest.cpp  ZeroCrossingsPropertyTest.cpp
tests/wave/processing/: ProcessorTest.cpp  SpectogramTest.cpp
tests/wave/processing/postprocessing/: FastFourierTransformFilterTest.cpp  HannWindowFilterTest.cpp
tests/wave/processing/preprocessing/: NormalizingFilterTest.cpp  SilenceCuttingFilterTest.cpp
(+49 files in other folders)
